rust/transpiler/tests/errors/unclosed_element.hyper
<div class="container">
    <span>Hello
</div>
