rust/transpiler/tests/errors/unclosed_element.expected.err

 file: unclosed_element.hyper:2:5
error: <span> is never closed.
 2 |     <span>Hello
   |     ^^^^^^ opened here

 help: Close with </span> or <span />

